# ntkrnl

./: .gitignore  CMakeLists.txt  README.md  dirs  nt-amd64.cmake  nt-common.cmake  nt.cmake  util.cmake
minkernel/: CMakeLists.txt  dirs  project.mk
minkernel/boot/: CMakeLists.txt
minkernel/boot/bootvid/: CMakeLists.txt  vga.c
minkernel/boot/kdcom/: CMakeLists.txt
minkernel/boot/lib/amd64/: amd64x86.c
minkernel/boot/startrom/daytona/: startrom.map
minkernel/boot/startrom/daytona.n12/: startrom.map
minkernel/boot/startrom/daytona.nui/: startrom.map
minkernel/boot/startrom/hdlscom1/: startrom.map
minkernel/boot/startrom/hdlscom1.n12/: startrom.map
minkernel/bootvid/: CMakeLists.txt  bootvid.c  vga.c
minkernel/clang/: CMakeLists.txt
minkernel/clang/amd64/: intrin.c
minkernel/crts/: CMakeLists.txt
minkernel/crts/crtw32/: CMakeLists.txt  dummy.c
minkernel/crts/crtw32/convert/: CMakeLists.txt
minkernel/crts/crtw32/h/: cruntime.h  fltintrn.h
minkernel/crts/crtw32/helper/i386/: sehprolg.asm
minkernel/fs/fltsamples/iotest/user/: iotestuser.c  iotestusersup.c
minkernel/fs/fltsamples/latency/filter/: latfastio.c
minkernel/fs/hsm/engine/task/: hsmworkq.cpp
minkernel/fs/lfs/: lfsdisk.h
minkernel/fs/mup/: fcbsup.c
minkernel/fs/ntfs/: attrsup.c  fileinfo.c  ntfsproc.h  read.c  restrsup.c  secursup.c  strucsup.c
minkernel/fs/rdr2/csc/record.mgr/: oslayer.c
minkernel/fs/rdr2/inc/: rxlog.h  rxprocs.h  scavengr.h
minkernel/fs/rdr2/rdbss/ifskit.mrx/nulmrx/dll/: nulmrxnp.h
minkernel/fs/rdr2/rdbss/ifskit.mrx/smbmrx/sys/: mm.c  mrxprocs.h  transact.c
minkernel/fs/rdr2/rdbss/smb.mrx/: mm.c  transact.c
minkernel/fs/srv/: xssupp.c
minkernel/fs/srv/daytonam/: srv.bmf
minkernel/fs/utils/cryptmnu/: classfac.cpp
minkernel/fs/utils/ulib/inc/: rtmsg.h
minkernel/fs/utils/untfs/src/: format.cxx  frsstruc.cxx  largemcb.c
minkernel/gssup/: gs_report.obj.c  gs_support.obj.c  gshandler.obj.c  gshandlereh.obj.c  gshandlereh4.obj.c  gshandlerseh.obj.c  gshandlerseh_noexcept.obj.c
minkernel/gssup/re/: gs_cookie.obj.i64  gs_report.obj.i64  gs_support.obj.i64  gshandler.obj.i64  gshandlereh.obj.i64  gshandlereh4.obj.i64  gshandlerseh.obj.i64  gshandlerseh_noexcept.obj.i64
minkernel/hals/: CMakeLists.txt  hal.def
minkernel/hals/halacpi/: CMakeLists.txt  xxtimer.c
minkernel/hals/halacpi/amd64/: amd64s.asm  hal.def  mpprofil.c  mpsproca.c  pmstub.h  rmstub.h
minkernel/hals/halacpi/mpapic/: xmstub.lst
minkernel/hals/halmps/i386/: mpclockc.c  mpprocst.c
minkernel/hals/halx86/i386/: ixfirm.c  ixhwsup.c  ixinfo.c  ixisasup.c  ixpcibus.c  ixphwsup.c  pmpcisup.c
minkernel/hals/processor/amdk6/: amdk6.h
minkernel/hals/processor/crusoe/: crusoe.h
minkernel/hals/processor/lib/: method.c  processor.c  processor.h
minkernel/hals/processor/p3/: p3.c  p3.h
minkernel/hals/x86new/: CMakeLists.txt
minkernel/kdcom/: CMakeLists.txt
minkernel/llvmtests/: .gitignore  clean.bat  compile.bat  testload.c  util.c  util.h
minkernel/ntdll/: cookie.c  ntdlldef.src
minkernel/ntdll/daytona/: sources
minkernel/ntdll/wow6432/: sources
minkernel/ntos/: CMakeLists.txt  dirs
minkernel/ntos/arb/: CMakeLists.txt  arbp.h
minkernel/ntos/cache/: CMakeLists.txt  cachesub.c  cc.h  prefboot.c  prefparm.c
minkernel/ntos/config/: CMakeLists.txt  cmdat.c  cmdelete.c  cmindex.c  cmp.h  cmtredel.c  cmtree.c  hivebin.c  sources.inc
minkernel/ntos/config/i386/: geninst.c  parseini.c
minkernel/ntos/dbgk/: CMakeLists.txt  dbgkp.h
minkernel/ntos/ex/: CMakeLists.txt  callback.c  exinit.c  exp.h  lookasid.c  resource.c  slist.c  sysinfo.c  systime.c
minkernel/ntos/fsrtl/: CMakeLists.txt  dbcsname.c  fastio.c  faulttol.c  filelock.c  filter.c  filtrctx.c  fsfilter.c  fsrtlp.h  fsrtlpc.c  largemcb.c  name.c  notify.c  oplock.c  pnp.c  stackovf.c  tunnel.c
minkernel/ntos/fstub/: CMakeLists.txt  ex.c
minkernel/ntos/inc/: amd64.h  cm.h  ex.h  io.h  kd.h  ntos.h  ps.h  wmi.h
minkernel/ntos/init/: CMakeLists.txt  RCa03428  ntoskrnl.aps  ntoskrnl.def  ntoskrnl_amd64.src
minkernel/ntos/io/: CMakeLists.txt  trackirp.c  trackirp.h
minkernel/ntos/io/iomgr/: CMakeLists.txt  qsquota.c
minkernel/ntos/io/pnpmgr/: CMakeLists.txt  iofileutil.c  pnppower.c  pnpres.c  ppmacro.h  ppvutil.c
minkernel/ntos/kd64/: CMakeLists.txt  kdapi.c  kdbreak.c
minkernel/ntos/ke/: CMakeLists.txt  bugcheck.c
minkernel/ntos/ke/amd64/: apcint.asm  ctxswap.asm  initkr.c  kiamd64.h  miscs.asm  procstat.asm  sysstubs.asm  systable.asm  trap.asm
minkernel/ntos/lpc/: CMakeLists.txt
minkernel/ntos/mm/: CMakeLists.txt  allocvm.c  creasect.c  lockvm.c  mi.h  queryvm.c  sectsup.c  session.c
minkernel/ntos/ob/: CMakeLists.txt  obdir.c  obhandle.c  obinit.c  obp.h  obquery.c  obref.c
minkernel/ntos/perf/: CMakeLists.txt  hooks.c
minkernel/ntos/po/: CMakeLists.txt  pinfo.c  sys.c
minkernel/ntos/ps/: CMakeLists.txt  create.c  psquery.c
minkernel/ntos/raw/: CMakeLists.txt  cleanup.c  close.c  create.c  fileinfo.c  fsctrl.c  rawdisp.c  rawinit.c  rawprocs.h  readwrit.c  strucsup.c  volinfo.c
minkernel/ntos/rtl/: CMakeLists.txt  avltable.c  checksum.c  error.h  heap.c  lznt1.c  message.c  ntrtlp.h  regutil.c  sertl.c  xprs.h
minkernel/ntos/rtl/amd64/: capture.asm  lznt1_amd64.c  lzntx86.asm  movemem.asm  slist.asm  xcptmisc.asm
minkernel/ntos/se/: CMakeLists.txt  adtp.h  rmlogon.c  seaudit.c  tokendup.c
minkernel/ntos/vdm/: CMakeLists.txt
minkernel/ntos/verifier/: CMakeLists.txt  vfbugcheck.h  vfdeadlock.h  vfdebug.h  vfdevobj.c  vffileio.c  vfgeneric.c  vfhal.c  vfirp.c  vfirpdb.h  vfpnp.c  vfpower.c  vfutil.c  vfwmi.c  vihal.h
minkernel/ntos/wmi/: CMakeLists.txt  tracelog.c
minkernel/ntos/wmi/kdexts/tracing/: wmitrace.c
minkernel/published/: ntpsapi.w  wmistr.h
minkernel/published/amd64/: MFL.MFL  MOFMFL.MOF  winbase.x
minkernel/published/i386/: MOF.MOF  dpfilter.c  dpfilter.h  dpfiltercm.c  dpfiltercm.h  winbase.inl  winbase.y  winbasep.x  winnls.x  winreg.x  winregp.x  wmicore.mof
minkernel/urtl/: CMakeLists.txt
tools/: copybins.bat  generate-clang.sh  generr  (+3 more)
(+1165 files in other folders)
